src/style.css
/* ... */
  
  *,
  *::before,
  *::after {
	box-sizing: border-box;
	scrollbar-color: transparent transparent;
	scrollbar-width: 0px;
	scroll-behavior: smooth;
  }
  
  *::-webkit-scrollbar {
	width: 0;
  }
  
  *::-webkit-scrollbar-track {
	background: transparent;
  }
  
  *::-webkit-scrollbar-thumb {
	background: transparent;
	border: none;
  }
  
  * {
	-ms-overflow-style: none;
  }
  
  body,
  h1,
  h2,
  h3,
  h4,
  h5,
  p,
  figure,
  picture {
	margin: 0;
	padding: 0;
  }
  
  html,
  body {
    position: relative;
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
  }

  html, body, main {
    position: relative;
    z-index: -10;
  }
  
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
	font-weight: 400;
  }
  
  /* make images easier to work with */
  img,
  picture {
	max-width: 100%;
	display: block;
  }
  
  /* make forms elements easier to work with */
  input,
  button,
  textarea,
  select {
	font: inherit;
  }
  
  /* remove animations for people who have them turned off */
  @media (prefers-reduced-motion: reduce) {
	*,
	*::before,
	*::after {
	  animation-duration: 0.01ms !important;
	  animation-iteration-count: 1 !important;
	  transition-duration: 0.01ms !important;
	  scroll-behavior: auto !important;
	}
  }
  
  button {
	cursor: pointer;
  }
  
  /* --------------------------  */
  /* Utility Classes             */
  /* --------------------------  */
  .flex {
	display: flex;
	gap: var(--gap, 0.25rem);
  }
  
  .relative {
	position: relative;
  }
  
  .d-block {
	display: block;
  }
  
  .hidden {
	display: none;
  }
  
  .flow > *:where(:not(:first-child)) {
	margin-top: var(--flow-space, 1rem);
  }
  
  .container {
	padding: 4rem 2rem;
	margin-inline: auto;
	max-width: min(80rem, 95%);
  }
  
  .sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap; /* added line */
	border: 0;
  }
  
  /* colors */
  .bg-dark {
	background-color: var(--dark);
  }
  .bg-accent {
	background-color: var(--accent);
  }
  .bg-accent-2 {
	background-color: var(--accent-2);
  }
  .bg-accent-3 {
	background-color: var(--accent-3);
  }
  .bg-white {
	background-color: var(--white);
  }
  
  .text-black {
	color: #000;
  }
  .text-accent {
	color: var(--accent);
  }
  .text-accent-2 {
	color: var(--accent-2);
  }
  .text-white {
	color: var(--white);
  }
  .text-green {
	color: var(--green);
  }
  .text-red {
	color: var(--red);
  }
  
  /* typography */
  .ff-serif {
	font-family: var(--ff-serif);
  }
  .ff-sans-normal {
	font-family: var(--ff-sans-normal);
  }
  
  .letter-spacing-1 {
	letter-spacing: 4.75px;
  }
  .letter-spacing-2 {
	letter-spacing: 2.7px;
  }
  .letter-spacing-3 {
	letter-spacing: 2.35px;
  }
  
  .uppercase {
	text-transform: uppercase;
  }
  
  .right {
	text-align: right;
  }
  
  .left {
	text-align: left;
  }
  
  .center {
	text-align: center;
  }
  
  .justify {
	text-align: justify;
  }
  
  .bold {
	font-weight: 700;
  }
  
  .fs-900 {
	font-size: var(--fs-900);
  }
  .fs-800 {
	font-size: var(--fs-800);
  }
  .fs-700 {
	font-size: var(--fs-700);
  }
  .fs-650 {
	font-size: var(--fs-650);
  }
  .fs-600 {
	font-size: var(--fs-600);
  }
  .fs-550 {
	font-size: var(--fs-550);
  }
  .fs-medium {
	font-size: var(--fs-medium);
  }
  .fs-small {
	font-size: var(--fs-small);
  }
  .fs-nav {
	font-size: var(--fs-nav);
  }
  
  .fs-900,
  .fs-800,
  .fs-medium {
	line-height: 1.2;
  }
  
  body {
    position: relative;

	background-image: url(/src/background.jpg);
	background-size: 100% 100%;
    z-index: -10;
  }
  
  .primary-header {
    gap: 1rem;
	width: 100%;
	max-width: 100%;
	height: 100px;
  
	align-items: center;
	background: rgb(0,11,79);
	background: var(--gradient);
    box-shadow: 0px 5px 2px var(--blue);
  }
  
  .mobile-nav-toggle {
	display: none;
  }
  
  /* button */
  .btn {
	padding: 1rem 2rem;
	margin-inline: auto;

	font-family: var(--ff-serif);
  
	color: white;
	background: linear-gradient(145deg, rgba(0,11,79,1) 0%, rgba(0,11,79,1) 40%, rgba(1,0,6,1) 100%);
	border: 0;
	border-radius: 20px;
  }

  .btn--x {
	width: clamp(25px, 4vw, 40px);
	height: clamp(25px, 4vw, 40px);
	margin-left: auto;

	background-image: url(/src/x-icon.png);
	background-color: transparent;
	background-size: cover;
	border: 0;
  }
  
  /* Navigation */
  .primary-navigation {
	padding: 0;
	margin: 0;
  
	list-style: none;
	font-size: var(--fs-nav);
  }
  
  .primary-navigation li {
	position: relative;
  }
  
  .active {
	border-bottom: 2px solid white;
  }
  
  .primary-navigation a {
	text-decoration: none;
	font-weight: 400;
  }
  
  .primary-navigation a:visited,
  .primary-navigation a {
	color: white;
	margin: 0 0 1rem;
  }
  
  .primary-navigation a:hover {
	border-bottom: 2px solid white;
  }
  
  button {
	margin: 0;
	padding: 0;
  }
  
  .header-logo {
	filter: saturate(1000%);
  }

  .header-pic {
	width: 100px;
	height: 100px;
  margin-left: 1rem;
	background-image: url(/src/globe-full.png);
	background-size: cover;
  background-position: center;
	opacity: 0.5;
  }

  .header-link {
    color: var(--white);
    text-decoration: none;
  }

  .header-link h2 {
    font-weight: 500;
    text-transform: uppercase;
    text-shadow: 0px 0px 10px var(--white);
    letter-spacing: 2px;
  }
  
  .logo {
	max-height: 80px;
    max-width: 33vw;

    object-fit: cover;
  }
/* ... */

